syntax = "proto3";

option go_package = "pkg/security/api";

package api;

message GetEventParams {}

message SecurityEventMessage {
    string RuleID = 1;
    bytes Data = 2;
    repeated string Tags = 3;
    string Service = 4;
}

message GetProcessEventParams{}

message SecurityProcessEventMessage {
    bytes Data = 1;
}

message DumpProcessCacheParams {
    bool WithArgs = 1;
}

message SecurityDumpProcessCacheMessage {
    string Filename = 1;
}

message DumpNetworkNamespaceParams {
    bool SnapshotInterfaces = 1;
}

message DumpNetworkNamespaceMessage {
    string error = 1;
    string DumpFilename = 2;
    string GraphFilename = 3;
}

message GetConfigParams {}

message SecurityConfigMessage {
    bool RuntimeEnabled = 1;
    bool FIMEnabled = 2;
}

message RunSelfTestParams {}

message ReloadPoliciesParams{}

message ReloadPoliciesResultMessage{}

message SecuritySelfTestResultMessage {
    bool Ok = 1;
    string Error = 2;
}

message GetStatusParams {}

message ConstantValueAndSource {
    string ID = 1;
    uint64 Value = 2;
    string Source = 3;
}

message SelfTestsStatus {
    string LastTimestamp = 1;
    repeated string Success = 2;
    repeated string Fails = 3;
}

message Status {
    EnvironmentStatus Environment = 1;
    SelfTestsStatus SelfTests = 2;
}

message ConstantFetcherStatus {
    repeated string Fetchers = 1;
    repeated ConstantValueAndSource Values = 2;
}

message EnvironmentStatus {
    repeated string Warnings = 1;
    ConstantFetcherStatus Constants = 2;
    string KernelLockdown = 3;
}

// Activity dump requests

message StorageRequestParams {
    string LocalStorageDirectory = 1;
    repeated string LocalStorageFormats = 2;
    bool LocalStorageCompression = 3;
    repeated string RemoteStorageFormats = 4;
    bool RemoteStorageCompression = 5;
}

message DumpActivityParams {
    string comm = 1;
    int32 timeout = 2;
    bool DifferentiateArgs = 4;
    StorageRequestParams Storage = 5;
}

message StorageRequestMessage {
    string Type = 1;
    string Format = 2;
    bool Compression = 3;
    string File = 4;
}

message SecurityActivityDumpMessage {
    string Comm = 1;
    string ContainerID = 2;
    repeated string Tags = 3;
    bool DifferentiateArgs = 4;
    string Timeout = 5;
    string Start = 6;
    string Left = 7;
    string Error = 8;
    repeated StorageRequestMessage Storage = 9;
    string Name = 10;
}

message ListActivityDumpsParams {}

message SecurityActivityDumpListMessage {
    repeated SecurityActivityDumpMessage Dumps = 1;
    string Error = 2;
}

message StopActivityDumpParams {
    string Comm = 2;
}

message SecurityActivityDumpStoppedMessage {
    string Error = 1;
}

message TranscodingRequestParams {
    string ActivityDumpFile = 1;
    StorageRequestParams Storage = 2;
}

message TranscodingRequestMessage {
    string Error = 1;
    repeated StorageRequestMessage Storage = 2;
}

service SecurityModule {
    rpc GetEvents(GetEventParams) returns (stream SecurityEventMessage) {}
    rpc GetProcessEvents(GetProcessEventParams) returns (stream SecurityProcessEventMessage) {}
    rpc DumpProcessCache(DumpProcessCacheParams) returns (SecurityDumpProcessCacheMessage) {}
    rpc GetConfig(GetConfigParams) returns (SecurityConfigMessage) {}
    rpc GetStatus(GetStatusParams) returns (Status) {}
    rpc RunSelfTest(RunSelfTestParams) returns (SecuritySelfTestResultMessage) {}
    rpc ReloadPolicies(ReloadPoliciesParams) returns (ReloadPoliciesResultMessage) {}
    rpc DumpNetworkNamespace(DumpNetworkNamespaceParams) returns (DumpNetworkNamespaceMessage) {}

    // Activity dumps
    rpc DumpActivity(DumpActivityParams) returns (SecurityActivityDumpMessage) {}
    rpc ListActivityDumps(ListActivityDumpsParams) returns (SecurityActivityDumpListMessage) {}
    rpc StopActivityDump(StopActivityDumpParams) returns (SecurityActivityDumpStoppedMessage) {}
    rpc TranscodingRequest(TranscodingRequestParams) returns (TranscodingRequestMessage) {}
}
